--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-styled-components": "^3.4.0",
+    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-json": "^2.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
