--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.27.0",
+    "gatsby-alias-imports": "^1.0.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-styled-components": "^3.5.0",
