--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "project-005",
-  "version": "1.0.0",
   "description": "project-005",
   "main": "index.js",
   "scripts": {
@@ -9,9 +8,15 @@
   "author": "tamasnvk",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-fontawesome": "^1.6.4",
     "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.12.0",
