--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-005",
   "description": "project-005",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.27.0",
     "gatsby-alias-imports": "^1.0.6",
+    "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-styled-components": "^3.5.0",
