--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "zustand": "^3.2.0"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.5",
